@@ -7,6 +7,7 @@
 - fixed `RESTBuilder.insecure()` method
 - extended `jsonschema.transform(value, callback, [partial])` by adding `partial` argument
 - `mail_smtp_options` supports `token {String}` for OAuth 2.0 Access Token
+- added `QueryBuilder.equal(object)` method
 
 ========================
 0.0.69
